--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 								name="purchase_date" 
 								id="purchase_date" 
 								class="block" 
-								required>							
+								required
+							>
 						</div>
 						<div class="box-input">
 							<p>Câmbio: <span class="required-field">*</span></p>
